<resources>
    <string name="app_name">SeniorProject</string>
    <string name="submit">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="end_inspection">End Inspection</string>
    <string name="start_inspection">Start New Inspection</string>
    <string name="view_inspections">View Old Inspections</string>
    <string name="edit_inspection">Resume Saved Inspections</string>
    <string name="take_pic_btn">Camera</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_api_key">AIzaSyAwQKj8kxTtuet6qAc_WjDlV5i_oDFJsE4</string>
    <string name="go_to_map">Go To Map</string>
    <string name="set_curr_location">Show Current Location</string>
    <string name="add_defect">Add Defect</string>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="gray">#d3d3d3</color>
    <string name="action_settings">Settings</string>
    <string name="type_of_track">Select the type of railroad track</string>
    <string name="inspection_form">Inspection Form</string>
    <string name="manage_acc">Manage Accounts</string>
    <string name="access_acc">Access Accounts</string>
    <string name="modify_mf">Modify Master Files</string>


</resources>
