<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--map-->
    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.seniorproject.TrackInsepctor.MapTI"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />
    <Button
        android:id="@+id/endInspection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_inspection"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp" />
    <Button
        android:id="@+id/setcurrentlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="14dp"
        android:text="@string/set_curr_location"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/adddefect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_defect"
        android:layout_alignBaseline="@+id/setcurrentlocation"
        android:layout_alignBottom="@+id/setcurrentlocation"
        android:layout_alignEnd="@+id/endInspection" />


    <ToggleButton
        android:id="@+id/placemarkermode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/setcurrentlocation"
        android:layout_alignTop="@+id/endInspection"
        android:checked="true"
        android:textOff="Marker Placement is Disabled"
        android:textOn="Marker Placement is Enabled" />

    <Button
        android:id="@+id/saveinspection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/endInspection"
        android:layout_below="@+id/endInspection"
        android:layout_marginTop="42dp"
        android:text="Save Inspection" />


</RelativeLayout>